--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 title: Mastering Tableau
 subtitle: A Comprehensive Guide to Data Visualization
+yturl: <iframe width="560" height="315" src="https://www.youtube.com/embed/OyaQs5UHRtE?si=ZiUaUt7klmLOpde_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 ---
